--- a/CalculatorWpf/Resources/CommonDictionary.xaml
+++ b/CalculatorWpf/Resources/CommonDictionary.xaml
@@ -21,8 +21,9 @@
 
     <Style TargetType="TextBox">
         <Setter Property="TextAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="Background" Value="Transparent"/>
     </Style>
 
     <Style TargetType="Button" x:Key="NumericButtons">
