Replaced all textboxes in StandardCalcView to labels. Adjusted styles in CommonDictionary and also changed logic of assuming font size of elements. Now ,instead of make font size dependent on main grid actual height, their font size is dependent on their own actual height.

--- a/CalculatorWpf/Views/AppView.xaml
+++ b/CalculatorWpf/Views/AppView.xaml
@@ -10,7 +10,7 @@
     <Window.Resources>
         <ResourceDictionary Source="../Resources/AppViewDictionary.xaml"/>
     </Window.Resources>
-    <Grid TextElement.FontSize="{Binding Path=Height, RelativeSource={RelativeSource AncestorType=Window}, Converter={StaticResource DoubleConverter}, ConverterParameter={StaticResource FontSizeParameterToMultiplyInDoubleConverter}}">
+    <Grid>
         <ContentControl Content="{Binding CurrentPage}"/>
     </Grid>
 </Window>
