--- a/CalculatorWpf/Resources/CommonDictionary.xaml
+++ b/CalculatorWpf/Resources/CommonDictionary.xaml
@@ -1,50 +1,54 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:CalculatorWpf.Resources"
-                    xmlns:conv="clr-namespace:CalculatorWpf.Converters">
+                    xmlns:conv="clr-namespace:CalculatorWpf.Converters"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
     <conv:DoubleConverter x:Key="DoubleConverter"/>
 
-    <Style TargetType="Button">
+    <sys:Double x:Key="FontSizeParameter">0.5</sys:Double>
+
+    <Style TargetType="Control">
+        <Setter Property="TextElement.FontSize" Value="{Binding RelativeSource={RelativeSource self}, Path=ActualHeight,UpdateSourceTrigger=PropertyChanged,  Converter={StaticResource DoubleConverter}, ConverterParameter={StaticResource FontSizeParameter}}"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
     </Style>
 
-    <Style TargetType="TextBlock">
-        <Setter Property="TextAlignment" Value="Center"/>
-        <Setter Property="TextWrapping"  Value="Wrap"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
-    </Style>
+    <Style TargetType="Button" BasedOn="{StaticResource {x:Type Control}}"/>
 
-    <Style TargetType="TextBox">
-        <Setter Property="TextAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Stretch"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+    <Style TargetType="Label" BasedOn="{StaticResource {x:Type Control}}"/>
+
+    <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type Control}}"/>
+
+
+    <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}" x:Key="ResultTextBoxStyle">
         <Setter Property="Background" Value="Transparent"/>
     </Style>
-
-    <Style TargetType="Button" x:Key="NumericButtons">
+    
+    <Style TargetType="Button" x:Key="NumericButtons" BasedOn="{StaticResource {x:Type Button}}">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Background" Value="White"/>
     </Style>
 
-    <Style TargetType="Button" x:Key="SpecialMButtons">
+    
+    <Style TargetType="Button" x:Key="SpecialMButtons" BasedOn="{StaticResource {x:Type Button}}">
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="FontSize" Value="14"/>
     </Style>
 
+    
     <Style TargetType="Button" x:Key="GreySpecialMButtons" BasedOn="{StaticResource SpecialMButtons}">
         <Setter Property="Foreground" Value="Gray"/>
     </Style>
 
+    
     <Style TargetType="Button" x:Key="BlackSpecialMButtons" BasedOn="{StaticResource SpecialMButtons}">
         <Setter Property="Foreground" Value="Black"/>
     </Style>
 
+    
     <Style TargetType="Grid" x:Key="MainGridStyle">
         <Setter Property="Background" Value="LightGray"/>
     </Style>
