--- a/CalculatorWpf/Views/StandardCalcView.xaml
+++ b/CalculatorWpf/Views/StandardCalcView.xaml
@@ -40,14 +40,14 @@
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
-                            <ColumnDefinition Width="auto"/>
+                            <!--<ColumnDefinition Width="auto"/>-->
                         </Grid.ColumnDefinitions>
                         <Label
                            Content="{Binding Expression, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                            Style="{StaticResource ResultTextBoxStyle}"/>
 
-                        <Label Grid.Column="1"
-                               Content="{Binding OperationSymbol, Mode=OneWay}"/>
+                        <!--<Label Grid.Column="1"
+                               Content="{Binding OperationSymbol, Mode=OneWay}"/>-->
                     </Grid>
                     <Label Grid.Row="1"
                              Content="{Binding Number, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -87,9 +87,11 @@
                     <Button Content="√"/>
                     <Button Content="x²"/>
                     <Button Content="1/x"/>
-                    <Button Content="CE"/>
+                    <Button Content="CE"
+                            Command="{Binding MakeZeroCurrentNumberCommand}"/>
                     <Button Content="C"/>
-                    <Button Content="⌫"/>
+                    <Button Content="⌫"
+                            Command="{Binding EraseNumberCommand}"/>
                     <Button Content="÷"
                             CommandParameter="{Binding Path=Content, RelativeSource={RelativeSource Self}}"                            
                             Command="{Binding CalculatorArithmeticOperationButtonCommand}"/>
@@ -143,7 +145,9 @@
                             Command="{Binding CalculatorNumberButtonClickCommand}"
                             CommandParameter="{Binding Path=Content, RelativeSource={RelativeSource Self}}"
                             Style="{StaticResource NumericButtons}"/>
-                    <Button Content=","/>
+                    <Button Content="{Binding DecimalSeparator, Mode=OneWay}"
+                            CommandParameter="{Binding Path=Content, RelativeSource={RelativeSource Self}}"
+                            Command="{Binding CalculatorNumberButtonClickCommand}"/>
                     <Button Content="="
                             CommandParameter="{Binding Path=Content, RelativeSource={RelativeSource Self}}"
                             Command="{Binding CalculatorArithmeticOperationButtonCommand}"/>
@@ -159,7 +163,19 @@
                 <Label
                     Content="History"/>
                 <ListBox Grid.Row="1"
-                         Style="{StaticResource HistoryListBoxStyle}"/>
+                         HorizontalContentAlignment="Stretch"
+                         Style="{StaticResource HistoryListBoxStyle}"
+                         ItemsSource="{Binding History}"
+                         ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Label 
+                                Content="{Binding}"
+                                HorizontalAlignment="Stretch"
+                                HorizontalContentAlignment="Right"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </Grid>
         </Grid>
     </Grid>
