--- a/CalculatorWpf/Views/StandardCalcView.xaml
+++ b/CalculatorWpf/Views/StandardCalcView.xaml
@@ -3,14 +3,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mvvm="http://www.galasoft.ch/mvvmlight"
              xmlns:local="clr-namespace:CalculatorWpf.Views"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary Source="../Resources/StandardCalcViewDictionary.xaml"/>
     </UserControl.Resources>
-    <Grid Style="{StaticResource MainGridStyle}">
+    <Grid 
+        Style="{StaticResource MainGridStyle}">
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="KeyDown">
+                <mvvm:EventToCommand 
+                    Command="{Binding CalculatorNumberButtonClickCommand}"
+                    PassEventArgsToCommand="true"
+                    EventArgsConverter="{StaticResource RoutedEventArgsToStringConverter}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
