--- a/CalculatorWpf/Resources/CommonDictionary.xaml
+++ b/CalculatorWpf/Resources/CommonDictionary.xaml
@@ -18,6 +18,7 @@
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Focusable" Value="False"/>
     </Style>
 
     <Style TargetType="Button" BasedOn="{StaticResource {x:Type Control}}"/>
